--- a/index.html
+++ b/index.html
@@ -8,11 +8,14 @@
         * {
             box-sizing: border-box;
         }
+        html {
+		    height: 100%;
+		    margin: 0;
+		}
 		body {
 		    display: flex;
 		    flex-direction: column;
-		    min-height: 100vh;
-		    overflow: auto;
+		    height: 100%;
 		    margin: 0;
 		}
         table {
