--- a/index.html
+++ b/index.html
@@ -23,14 +23,14 @@
             border-collapse: collapse;
             margin-bottom: 10px;
         }
-        th, td {
-            border: 1px solid black;
-            text-align: center;
-            padding: 10px;
-            font-size: 24px;
-            white-space: nowrap;
-            min-width: 100px;
-        }
+		th, td {
+		    border: 1px solid black;
+		    text-align: center;
+		    padding: 10px;
+		    font-size: 24px;
+		    white-space: nowrap;
+		    width: 25%; /* 追加 */
+		}
         input[type="number"], select {
             max-width: 100%; /* 修正 */
             height: 100%;
