--- a/index.html
+++ b/index.html
@@ -13,10 +13,11 @@
 		    margin: 0;
 		}
 		body {
-		    display: flex;
-		    flex-direction: column;
-		    height: 100%;
-		    margin: 0;
+		  display: flex;
+		  flex-direction: column;
+		  height: 100%;
+		  margin: 0;
+		  overflow: hidden;
 		}
         table {
             width: 100%;
