--- a/index.html
+++ b/index.html
@@ -115,19 +115,19 @@
     </tr>
     <tr>
       <th style="background-color: lightblue;">ゲーム</th>
-      <td><input type="number" id="gameCount" value="" oninput="calculate()"></td>
+      <td><input type="number" pattern="\d*" id="gameCount" value="" oninput="calculate()"></td>
       <td>-</td>
       <td>-</td>
     </tr>
     <tr>
       <th style="background-color: lightcoral;">BB</th>
-      <td><input type="number" id="bbCount" value="" oninput="calculate()"></td>
+      <td><input type="number" pattern="\d*" id="bbCount" value="" oninput="calculate()"></td>
       <td id="bbProbability">-</td>
       <td id="bbSetting">-</td>
     </tr>
     <tr>
       <th style="background-color: lightgreen;">RB</th>
-      <td><input type="number" id="rbCount" value="" oninput="calculate()"></td>
+      <td><input type="number" pattern="\d*" id="rbCount" value="" oninput="calculate()"></td>
       <td id="rbProbability">-</td>
       <td id="rbSetting">-</td>
     </tr>
