--- a/index.html
+++ b/index.html
@@ -138,7 +138,12 @@
       <td id="totalSetting">-</td>
     </tr>
   </table>
-  <div class="button-container"> <button class="game" onclick="incrementGame(10)">ゲーム+10</button> <button class="game" onclick="incrementGame(100)">ゲーム+100</button> <button class="bb" onclick="incrementBB(1)">BB+1</button> <button class="rb" onclick="incrementRB(1)">RB+1</button> </div>
+  <div class="button-container"> 
+  
+  <button class="game" onclick="incrementGame(1000)">ゲーム+1000</button> 
+  <button class="game" onclick="incrementGame(100)">ゲーム+100</button> 
+  <button class="game" onclick="incrementGame(10)">ゲーム+10</button> 
+  <button class="bb" onclick="incrementBB(1)">BB+1</button> <button class="rb" onclick="incrementRB(1)">RB+1</button> </div>
   <script>
     const modelSettings = {
     model1: [
