--- a/index.html
+++ b/index.html
@@ -128,7 +128,8 @@
             <option value="model1">アイムジャグラーEX</option>
             <option value="model2">マイジャグラーV</option>
             <option value="model3">ファンキージャグラー2</option>
-            <option value="model4">ハッピージャグラーV III</option> <!-- 追加 -->
+            <option value="model4">ハッピージャグラーV III</option>
+            <option value="model5">ゴーゴージャグラー3</option> <!-- 追加 -->
         </select> <button class="reset-button" onclick="resetCounts()">リセット</button> </div>
     <table>
         <tr>
@@ -202,6 +203,13 @@
                 { bb: 1 / 254.0, rb: 1 / 300.6, total: 1 / 137.7 },
                 { bb: 1 / 239.2, rb: 1 / 273.1, total: 1 / 127.5 },
                 { bb: 1 / 226.0, rb: 1 / 256.0, total: 1 / 120.0 }
+            ], model5: [
+                { bb: 1 / 259.0, rb: 1 / 354.2, total: 1 / 149.6 },
+                { bb: 1 / 258.0, rb: 1 / 332.7, total: 1 / 145.3 },
+                { bb: 1 / 257.0, rb: 1 / 306.2, total: 1 / 139.7 },
+                { bb: 1 / 254.0, rb: 1 / 268.6, total: 1 / 130.5 },
+                { bb: 1 / 247.3, rb: 1 / 247.3, total: 1 / 123.7 },
+                { bb: 1 / 234.9, rb: 1 / 234.9, total: 1 / 117.4 }
             ]
         };
         let currentSettings = modelSettings["model1"];
