--- a/index.html
+++ b/index.html
@@ -129,7 +129,8 @@
             <option value="model2">マイジャグラーV</option>
             <option value="model3">ファンキージャグラー2</option>
             <option value="model4">ハッピージャグラーV III</option>
-            <option value="model5">ゴーゴージャグラー3</option> <!-- 追加 -->
+            <option value="model5">ゴーゴージャグラー3</option>
+            <option value="model6">ジャグラーガールズSS</option>
         </select> <button class="reset-button" onclick="resetCounts()">リセット</button> </div>
     <table>
         <tr>
@@ -210,6 +211,13 @@
                 { bb: 1 / 254.0, rb: 1 / 268.6, total: 1 / 130.5 },
                 { bb: 1 / 247.3, rb: 1 / 247.3, total: 1 / 123.7 },
                 { bb: 1 / 234.9, rb: 1 / 234.9, total: 1 / 117.4 }
+            ], model6: [
+                { bb: 1 / 273.1, rb: 1 / 381.0, total: 1 / 159.1 },
+                { bb: 1 / 270.8, rb: 1 / 350.5, total: 1 / 152.8 },
+                { bb: 1 / 260.1, rb: 1 / 316.6, total: 1 / 142.8 },
+                { bb: 1 / 250.1, rb: 1 / 281.3, total: 1 / 132.4 },
+                { bb: 1 / 243.6, rb: 1 / 270.8, total: 1 / 128.3 },
+                { bb: 1 / 226.0, rb: 1 / 252.1, total: 1 / 119.2 }
             ]
         };
         let currentSettings = modelSettings["model1"];
