--- a/index.html
+++ b/index.html
@@ -225,7 +225,8 @@
             const modelSelect = document.getElementById("model");
             const selectedModel = modelSelect.value;
             currentSettings = modelSettings[selectedModel];
-            resetCounts(); // カウントをリセット
+            //resetCounts(); // カウントをリセット
+            calculate();
         }
 
         // カウントをリセットする関数
