--- a/index.html
+++ b/index.html
@@ -148,7 +148,7 @@
         </tr>
         <tr>
             <th style="background-color: lightcoral;">BB</th>
-            <td>input type="number" pattern="\d*" id="bbCount" value="" oninput="calculate()"></td>
+            <td><input type="number" pattern="\d*" id="bbCount" value="" oninput="calculate()"></td>
             <td id="bbProbability">-</td>
             <td id="bbSetting">-</td>
         </tr>
