--- a/index.html
+++ b/index.html
@@ -41,11 +41,11 @@
 
         input[type="number"],
         select {
-            max-width: 100%;
+            max-width: 80%;
             height: 100%;
             font-size: 24px;
             text-align: center;
-            border: none;
+            /*border: none;*/
         }
 
         select {
@@ -54,7 +54,7 @@
 
         .button-container {
             display: flex;
-            //flex-direction: column;
+            /*flex-direction: column;*/
             flex-wrap:wrap;
             gap: 5px;
             padding: 5px;
