--- a/index.html
+++ b/index.html
@@ -39,9 +39,8 @@
             width: 25%;
         }
 
-        input[type="number"],
-        select {
-            max-width: 80%;
+        input[type="number"]{
+            max-width: 95%;
             height: 100%;
             font-size: 24px;
             text-align: center;
@@ -49,6 +48,7 @@
         }
 
         select {
+            max-width: 50%;
             height: 80px;
         }
 
