--- a/index.html
+++ b/index.html
@@ -66,7 +66,7 @@
 
         button {
             flex-grow: 1;
-            width: 32%;
+            width: 49%;
             border: none;
             cursor: pointer;
             font-size: 32px;
@@ -168,11 +168,10 @@
         <button class="game" onclick="incrementGame(1000)">G+1000</button>
         <button class="game" onclick="incrementGame(100)">G+100</button>
         <button class="game" onclick="incrementGame(10)">G+10</button>
+        <button class="game" onclick="incrementGame(1)">G+1</button>
         <button class="bb" onclick="incrementBB(10)">BB+10</button>
-        <button class="bb" onclick="incrementBB(5)">BB+5</button>
         <button class="bb" onclick="incrementBB(1)">BB+1</button>
         <button class="rb"  onclick="incrementRB(10)">RB+10</button>
-        <button class="rb"  onclick="incrementRB(5)">RB+5</button>
         <button class="rb"  onclick="incrementRB(1)">RB+1</button>
     </div>
     <script>
