--- a/index.html
+++ b/index.html
@@ -165,14 +165,14 @@
     </table>
     <div class="button-container">
 
-        <button class="game" onclick="incrementGame(1000)">G+1000</button>
-        <button class="game" onclick="incrementGame(100)">G+100</button>
-        <button class="game" onclick="incrementGame(10)">G+10</button>
-        <button class="game" onclick="incrementGame(1)">G+1</button>
-        <button class="bb" onclick="incrementBB(10)">BB+10</button>
-        <button class="bb" onclick="incrementBB(1)">BB+1</button>
-        <button class="rb"  onclick="incrementRB(10)">RB+10</button>
-        <button class="rb"  onclick="incrementRB(1)">RB+1</button>
+        <button class="game" onclick="incrementGame(1000)">+1000</button>
+        <button class="game" onclick="incrementGame(100)">+100</button>
+        <button class="game" onclick="incrementGame(10)">+10</button>
+        <button class="game" onclick="incrementGame(1)">+1</button>
+        <button class="bb" onclick="incrementBB(10)">+10</button>
+        <button class="bb" onclick="incrementBB(1)">+1</button>
+        <button class="rb"  onclick="incrementRB(10)">+10</button>
+        <button class="rb"  onclick="incrementRB(1)">+1</button>
     </div>
     <script>
         document.addEventListener("dblclick", function(e){ e.preventDefault();}, { passive: false });
