--- a/index.html
+++ b/index.html
@@ -104,18 +104,23 @@
 
             th,
             td {
-                font-size:18px;
+                font-size:20px;
                 min-width: 60px;
             }
 
-            input[type="number"],
+            input[type="number"]
+            {
+                font-size: 20px;
+                width: 100%;
+            }
+
             select {
                 font-size: 18px;
                 width: 100%;
             }
 
             button {
-                font-size: 18px;
+                font-size: 25px;
                 padding: 0px;
             }
         }
