--- a/index.html
+++ b/index.html
@@ -44,7 +44,6 @@
             height: 100%;
             font-size: 24px;
             text-align: center;
-            /*border: none;*/
         }
 
         select {
@@ -68,13 +67,14 @@
             border: none;
             cursor: pointer;
             font-size: 32px;
-            padding: 15px;
         }
 
         .select-reset-container {
             display: flex;
             justify-content: flex-start;
             width: 100%;
+            gap: 5px;
+            padding: 5px;
         }
 
         .reset-button {
