--- a/index.html
+++ b/index.html
@@ -133,6 +133,7 @@
             <option value="model4">ハッピージャグラーV III</option>
             <option value="model5">ゴーゴージャグラー3</option>
             <option value="model6">ジャグラーガールズSS</option>
+            <option value="model6">ミスタージャグラー</option>
         </select> <button class="reset-button" onclick="resetCounts()">リセット</button> </div>
     <table>
         <tr>
@@ -227,6 +228,13 @@
                 { bb: 1 / 250.1, rb: 1 / 281.3, total: 1 / 132.4 },
                 { bb: 1 / 243.6, rb: 1 / 270.8, total: 1 / 128.3 },
                 { bb: 1 / 226.0, rb: 1 / 252.1, total: 1 / 119.2 }
+            ], model7: [
+                { bb: 1 / 268.6, rb: 1 / 374.5, total: 1 / 156.4 },
+                { bb: 1 / 267.5, rb: 1 / 354.2, total: 1 / 152.4 },
+                { bb: 1 / 260.1, rb: 1 / 331.0, total: 1 / 145.6 },
+                { bb: 1 / 249.2, rb: 1 / 291.3, total: 1 / 134.3 },
+                { bb: 1 / 240.9, rb: 1 / 257.0, total: 1 / 124.4 },
+                { bb: 1 / 237.4, rb: 1 / 237.4, total: 1 / 118.7 }
             ]
         };
         let currentSettings = modelSettings["model1"];
