--- a/index.html
+++ b/index.html
@@ -127,12 +127,12 @@
 
 <body>
     <div class="select-reset-container"> <select id="model" onchange="updateSettings()" style="width: 100%;">
-            <option value="model1">アイムジャグラーEX</option>
-            <option value="model2">マイジャグラーV</option>
-            <option value="model3">ファンキージャグラー2</option>
-            <option value="model4">ハッピージャグラーV III</option>
-            <option value="model5">ゴーゴージャグラー3</option>
-            <option value="model6">ジャグラーガールズSS</option>
+            <option value="model1">アイムジャグラー</option>
+            <option value="model2">マイジャグラー</option>
+            <option value="model3">ファンキージャグラー</option>
+            <option value="model4">ハッピージャグラー</option>
+            <option value="model5">ゴーゴージャグラー</option>
+            <option value="model6">ジャグラーガールズ</option>
             <option value="model6">ミスタージャグラー</option>
         </select> <button class="reset-button" onclick="resetCounts()">リセット</button> </div>
     <table>
