--- a/index.html
+++ b/index.html
@@ -171,8 +171,10 @@
 
         <button class="game" onclick="incrementGame(1000)">+1000</button>
         <button class="game" onclick="incrementGame(100)">+100</button>
-        <!–<button class="game" onclick="incrementGame(10)">+10</button>–>
-        <!–<button class="game" onclick="incrementGame(1)">+1</button>–>
+        <!–
+        <button class="game" onclick="incrementGame(10)">+10</button>
+        <button class="game" onclick="incrementGame(1)">+1</button>
+        –>
         <button class="bb" onclick="incrementBB(5)">+5</button>
         <button class="bb" onclick="incrementBB(1)">+1</button>
         <button class="rb"  onclick="incrementRB(5)">+5</button>
