--- a/index.html
+++ b/index.html
@@ -26,6 +26,8 @@
         table {
             width: 100%;
             border-collapse: collapse;
+            margin-right: 5px;
+            margin-left: 5px;
             margin-bottom: 0px;
         }
 
